Finished Working on buttons

--- a/Index.html
+++ b/Index.html
@@ -6,37 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Note-ly</title>
+    <title>Assignmnt-1-1620(INDEX)</title>
 </head>
-
 <body>
-
     <nav>
         <ul class="nav">
-            <li><a href="https://www.youtube.com/watch?v=CNLrf8Ao48s">About</a></li>
-            <li><a href="https://www.youtube.com/watch?v=oEVnq6LIKOM">Docs</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Docs</a></li>
         </ul>
     </nav>
-
-
     <section class="wrapper">
         <div class="hj-menu-button">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
+            <button name="notes">
+                >>>
+            </button>
         </div>
-
         <div class="new-note">
             <i class="plus"></i>
             <p><a href="./note.html">create new note</a></p>
         </div>
     </section>
-
-
     <footer>
         <p>created by HJ</a>.</p>
     </footer>
-
 </body>
-
 </html>
