--- a/note.html
+++ b/note.html
@@ -6,21 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Note-ly</title>
+    <title>Assignment-1-1620(NOTE)</title>
 </head>
 
 <body>
 
     <nav>
         <ul class="nav">
-            <li><a href="https://www.youtube.com/watch?v=CNLrf8Ao48s">About</a></li>
-            <li><a href="https://www.youtube.com/watch?v=oEVnq6LIKOM">Docs</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Docs</a></li>
         </ul>
     </nav>
-
-
     <section class="wrapper">
         <div class="hj-menu">
+            <button name="notes">
+                >>>
+            </button>
             <p><strong>my notes</strong></p>
             <ul class="note-list">
                 <li>note 1</li>
@@ -28,25 +29,22 @@
                 <li>note 3</li>
             </ul>
         </div>
-
+        <div class="np">
+            <i class="plus"></i>
+        </div>
         <div class="new-note">
-            <textarea name="note" id="note" cols="50" rows="20" placeholder="your note here"></textarea>
+           <textarea name="note" id="note" cols="50" rows="20" placeholder="your note here"></textarea>
             <div class="note-buttons">
                 <a href="" class="save">save</a>
                 <a href="" class="delete">delete</a>
             </div>
         </div>
-
         <div class="use-desktop">
             <p>Unsuported Browser. Use DESKTOP for best experience.</p>
         </div>
     </section>
-
-
     <footer>
         <p>created by HJ</a>.</p>
     </footer>
-
 </body>
-
 </html>
