--- a/Index.html
+++ b/Index.html
@@ -6,28 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
     <title>Assignmnt-1-1620(INDEX)</title>
 </head>
 <body>
-    <nav>
-        <ul class="nav">
-            <li><a href="">About</a></li>
-            <li><a href="">Docs</a></li>
-        </ul>
-    </nav>
-    <section class="wrapper">
-        <div class="hj-menu-button">
+    <div class="hj-container">
+        <nav class="header">
+            <ul>
+                <li class="About-header"><a href=#>About</a></li>
+                <li class="About-header"><a href=#>Docs</a></li>
+            </ul>
+        </nav>
+        
+        <div class="hj-menu">
             <button name="notes">
                 >>>
             </button>
         </div>
+        
         <div class="new-note">
-            <i class="plus"></i>
-            <p><a href="./note.html">create new note</a></p>
+            <p>
+                <a href="./note.html"><button> + </button> create new note</a>
+            </p>
         </div>
-    </section>
-    <footer>
-        <p>created by HJ</a>.</p>
-    </footer>
+        <footer>
+                Created by HJ
+        </footer>
+    </div>  
 </body>
 </html>
