working on media query

--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
         
         <div class="new-note">
             <p>
-                <a href="./note.html"><button> + </button> create new note</a>
+                <a href="./note.html"><i class="plus"></i> create new note</a>
             </p>
         </div>
         <footer>
