working on media query

--- a/Index.html
+++ b/Index.html
@@ -17,18 +17,19 @@
                 <li class="About-header"><a href=#>Docs</a></li>
             </ul>
         </nav>
+        <section class="main"></section>
+            <div class="hj-menu">
+                <button name="notes">
+                    >>>
+                </button>
+            </div>
         
-        <div class="hj-menu">
-            <button name="notes">
-                >>>
-            </button>
-        </div>
-        
-        <div class="new-note">
-            <p>
-                <a href="./note.html"><i class="plus"></i> create new note</a>
-            </p>
-        </div>
+            <div class="new-note">
+                <p>
+                    <a href="./note.html"><button name="plus">+</button>create new note</a>
+                </p>
+            </div>
+        </section>
         <footer>
                 Created by HJ
         </footer>
